# testability-linter

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  flake.nix  rules.toml  shell.nix
example/: BinaryInNameCamelCase.java  BinaryInNameCamelCaseStart.java  BinaryInNameSnakeCase.java  BinaryInNameSnakeCaseStart.java  BinaryInNameSnakeCaseUpper.java  BinaryInNameSnakeCaseUpperStart.java  BinaryNameOnly.java  Example.java  Noeud.java  Test.java  TooManyArguments.java
nix/: default.nix
src/: main.rs
src/cli/: cli.rs
src/config/: config.rs
src/enums/: mod.rs  rules_enum.rs
src/errors/: fail.rs  failed_rules.rs  generic.rs  mod.rs
src/rules/java/: java_rules.rs  mod.rs  parse.rs  rules.rs  utils.rs
src/types/: mod.rs  passed_rules.rs  rule.rs
src/utils/: mod.rs  path.rs  print.rs
tests/inputs/config/invalid/: malformed_file.toml
tests/inputs/config/valid/: all_rules.toml  some_rules.toml  some_unnecessary_rules.toml  unnecessary_rules.toml
tests/inputs/java/check_no_void/invalid/: FiveVoidMethod.java  FourVoidMethod.java  ThreeVoidMethod.java  TwoVoidMethod.java  VoidMethod.java
tests/inputs/java/check_no_void/valid/: ConstructorMethod.java  MainMethod.java  NoVoidMethod.java
tests/inputs/java/no_binary_in_names/invalid/: AndInNameCamelCase.java  AndInNameCamelCaseStart.java  AndInNameSnakeCase.java  AndInNameSnakeCaseStart.java  AndInNameSnakeCaseUpper.java  AndInNameSnakeCaseUpperStart.java  OrInNameCamelCase.java  OrInNameCamelCaseStart.java  OrInNameSnakeCase.java  (+3 more)
tests/inputs/java/too_many_arguments/: TooManyArgumentsNumber.java
(+7 files in other folders)
