[package]
name = "testability-linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = "0.0.25"

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
