[package]
name = "testability-linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile-parser = "~0.3"
colored = "2.0.0"
regex = "1.8.4"
lazy_static = "1.4.0"

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]

